--- a/HessianBased.ipynb
+++ b/HessianBased.ipynb
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "id": "813c7b7a-a4a1-40c9-a7b5-7bafefc391f1",
    "metadata": {
     "tags": []
@@ -1756,11 +1756,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1004746/3413966538.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_1004746/1867493343.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(np.linspace(0, 50, 11).astype(int), fontsize=fontsize)\n",
-      "/tmp/ipykernel_1004746/3413966538.py:20: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_1004746/1867493343.py:20: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(np.linspace(0, 12, 7).astype(int), fontsize=fontsize)\n",
-      "/tmp/ipykernel_1004746/3413966538.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_1004746/1867493343.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  twin1.set_yticklabels(np.round(np.linspace(0, 1, 6),1), fontsize=fontsize)\n"
      ]
     },
@@ -1807,7 +1807,7 @@
     "\n",
     "ax.legend(handles=[p1, p2, p3], fontsize=fontsize)\n",
     "\n",
-    "plt.savefig('/home/msst/loss.png')"
+    "plt.savefig('/home/msst/loss.jpg')"
    ]
   },
   {
